--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "broadage-widget-react": "^1.0.11",
     "install": "^0.13.0",
     "netlify-cli": "^9.4.4",
     "npm": "^8.11.0",
